--- a/main.css
+++ b/main.css
@@ -6,6 +6,10 @@
   --light: #eee;
   --pink: #ec4899;
   --purple: #8b5cf6;
+  --green: #2ed573;
+  --marine: #273c75;
+  --blue: #3498db;
+  --softblue: #74b9ff;
 }
 
 * {
@@ -30,7 +34,7 @@ header {
 }
 
 header h1 {
-  font-size: 2.5rem;
+  font-size: min(2rem, 2vw);
   font-weight: 300;
   color: var(--gray);
   margin-bottom: 1rem;
@@ -55,7 +59,7 @@ button {
   border-radius: 1rem;
   margin-right: 1rem;
   color: var(--light);
-  font-size: 1.5rem;
+  font-size: min(2rem, 2vw);
 }
 
 #new-task-input::placeholder {
@@ -64,9 +68,9 @@ button {
 
 #new-task-submit {
   color: var(--pink);
-  font-size: 1.25rem;
+  font-size: min(1.25rem, 1.5vw);
   font-weight: 700;
-  background-image: linear-gradient(to right, var(--pink), var(--purple));
+  background-image: linear-gradient(to right, var(--blue), var(--softblue));
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -95,7 +99,7 @@ main {
 } */
 
 .task-list h2 {
-  font-size: 1.5rem;
+  font-size: max(1.5rem, 1.5vw);
   font-weight: 300;
   color: var(--gray);
   margin-bottom: 1rem;
@@ -116,10 +120,19 @@ main {
 
 #tasks .task .content .text {
   color: var(--light);
-  font-size: 1.125rem;
+  font-size: min(1.125rem, 1.5vw);
   width: 100%;
   display: block;
   transition: 0.4s;
+}
+
+#tasks .task .content .fulfill {
+  color: var(--green);
+  font-size: min(1.125rem, 1.5vw);
+  width: 100%;
+  display: block;
+  transition: 0.4s;
+  text-decoration: line-through;
 }
 
 #tasks .task .content .text:not(:read-only) {
@@ -157,6 +170,13 @@ main {
 
 .task .actions .delete {
   color: crimson;
+}
+
+.task .actions .checked {
+  background-image: linear-gradient(to right, var(--green), var(--light));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @media screen and (max-width: 700px) {
